--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Register</h2>
-<form method="post" action="/auth/register">
+<form method="post" th:action="@{/register}">
     <label for="username">Username: </label>
     <input type="text" id="username" name="username" required/><br>
     <label for="password">Password: </label>
