--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -6,7 +6,7 @@
 
 body {
     display: flex;
-    background: #ef62da;
+    background: saddlebrown;
     min-height: 100vh;
     padding: 0 10px;
     align-items: center;
