--- a/src/main/resources/templates/deposit.html
+++ b/src/main/resources/templates/deposit.html
@@ -5,15 +5,100 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" th:href="@{/css/deposit.css}">
+    <link rel="stylesheet" th:href="@{/css/font-awesome.all.min.css}">
+    <script th:src="@{/js/font-awesome.all.min.js}"></script>
     <title>Deposit</title>
 </head>
 <body>
-<form th:action="@{/home}" method="get">
-    <h2>Deposit</h2>
-    <input type="text" readonly disabled th:value="${deposit.getDate()}"/>
-    <input type="text" readonly disabled th:value="${deposit.getAmount()}"/>
-    <input type="text" readonly disabled th:value="${deposit.getDescription()}"/>
-    <input type="submit" value="Go To Home">
-</form>
+<div class="container">
+    <div class="iphone">
+        <div class="header">
+            <div class="header-summary">
+                <div class="summary-text">
+                    My Balance
+                </div>
+                <div class="summary-balance">
+                    <span>2.000.000</span><span> VNĐ</span>
+                </div>
+                <div class="summary-text-2">
+                    <span>100,000</span>
+                </div>
+            </div>
+            <div class="user-profile">
+                <img th:src="@{/img/avatar.png}" class="user-photo" alt="avatar">
+            </div>
+        </div>
+        <div class="content">
+            <div class="card">
+                <div class="upper-row">
+                    <div class="card-item">
+                        <span>Deposit</span>
+                        <span>300,000<span class="dollar">₫</span></span>
+                    </div>
+                    <div class="card-item">
+                        <span>Withdraw</span>
+                        <span>200,000<span class="dollar">₫</span></span>
+                    </div>
+                </div>
+                <div class="lower-row">
+                    <div class="icon-item">
+                        <div class="icon">50%</div>
+                        <div class="icon-text">Tiền Thưởng</div>
+                    </div>
+                    <div class="icon-item">
+                        <div class="icon red">0%</div>
+                        <div class="icon-text">Phí Sinh Hoạt</div>
+                    </div>
+                </div>
+            </div>
+            <div class="transactions"><span class="t-desc">Recent Transactions</span>
+                <div class="transaction">
+                    <div class="t-icon-container">
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                    </div>
+                    <div class="t-details">
+                        <div class="t-title">Tiền Tiết Kiệm</div>
+                        <div class="t-time">05/12/2023</div>
+                    </div>
+                    <div class="t-amount">+&nbsp;50,000₫</div>
+                </div>
+
+                <div class="transaction">
+                    <div class="t-icon-container">
+                        <i class="fa-solid fa-right-to-bracket"></i>
+                    </div>
+                    <div class="t-details">
+                        <div class="t-title">Tiền Lãi</div>
+                        <div class="t-time">01/11/2023</div>
+                    </div>
+                    <div class="t-amount">+&nbsp;20,000₫</div>
+                </div>
+
+                <div class="transaction">
+                    <div class="t-icon-container">
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                    </div>
+                    <div class="t-details">
+                        <div class="t-title">Tiền Tiêu Vặt</div>
+                        <div class="t-time">14/09/2023</div>
+                    </div>
+                    <div class="t-amount red">-&nbsp;100,000₫
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="drawer">
+            <span><i class="fa-solid fa-money-bill-trend-up"></i></span>
+            <span><i class="fa-solid fa-money-bill-trend-up fa-flip-vertical"></i></span>
+            <div class="menu-btn"><i class="fa-solid fa-house-user"></i></div>
+            <span><!---to evenly space icons---></span>
+            <span><i class="fa-regular fa-calendar-days"></i></span>
+            <span><i class="fa-solid fa-chart-pie"></i></span>
+        </div>
+
+    </div>
+</div>
 </body>
+
 </html>
