--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="stylesheet" th:href="@{/css/font-awesome.all.min.css}">
     <script th:src="@{/js/font-awesome.all.min.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/home.js}"></script>
     <title>Home</title>
 </head>
@@ -23,7 +24,7 @@
                     <span th:text="${homeDTO.getCurrentBalanceStr()}">2.000.000</span><span> VNĐ</span>
                 </div>
                 <div class="summary-text-2" th:with="differenceAmount=${homeDTO.getDepositAmount() - homeDTO.getWithdrawAmount()}">
-                    <span th:if="${differenceAmount > 0}">+</span><span th:text="${differenceAmount}">100,000</span>
+                    <span th:if="${differenceAmount > 0}">+</span><span th:text="${homeDTO.getDifferenceAmountStr()}">100,000</span>
                 </div>
             </div>
             <div class="user-profile">
@@ -54,48 +55,25 @@
                 </div>
             </div>
             <div class="transactions"><span class="t-desc">Recent Transactions</span>
-                <div class="transaction">
+                <div class="transaction" th:each="transaction,stats : ${homeDTO.getRecentTransactions()}" th:with="isDeposit = ${transaction.getAmount() >= 0}">
                     <div class="t-icon-container">
-                        <i class="fa-solid fa-right-to-bracket"></i>
+                        <i th:class="${isDeposit ? 'fa-solid fa-right-to-bracket' : 'fa-solid fa-right-from-bracket'}"></i>
                     </div>
                     <div class="t-details">
-                        <div class="t-title">Tiền Tiết Kiệm</div>
-                        <div class="t-time">05/12/2023</div>
+                        <div class="t-title" th:text="${transaction.getCategoryDTO().getCategoryName()}">Tiền Tiết Kiệm</div>
+                        <div class="t-time" th:text="${transaction.getDateStr()}">05/12/2023</div>
                     </div>
-                    <div class="t-amount">+&nbsp;50,000₫</div>
-                </div>
-
-                <div class="transaction">
-                    <div class="t-icon-container">
-                        <i class="fa-solid fa-right-to-bracket"></i>
-                    </div>
-                    <div class="t-details">
-                        <div class="t-title">Tiền Lãi</div>
-                        <div class="t-time">01/11/2023</div>
-                    </div>
-                    <div class="t-amount">+&nbsp;20,000₫</div>
-                </div>
-
-                <div class="transaction">
-                    <div class="t-icon-container">
-                        <i class="fa-solid fa-right-from-bracket"></i>
-                    </div>
-                    <div class="t-details">
-                        <div class="t-title">Tiền Tiêu Vặt</div>
-                        <div class="t-time">14/09/2023</div>
-                    </div>
-                    <div class="t-amount red">-&nbsp;100,000₫
-                    </div>
+                    <div th:class="${'t-amount' + (isDeposit ? '' : ' red')}" th:text="${(isDeposit ? '+' : '') + transaction.getAmountStr()}">+&nbsp;50,000₫</div>
                 </div>
             </div>
         </div>
         <div class="drawer">
             <span><i class="fa-solid fa-money-bill-trend-up" onclick="goToDeposit()"></i></span>
-            <span><i class="fa-solid fa-money-bill-trend-up fa-flip-vertical"></i></span>
-            <div class="menu-btn"><i class="fa-solid fa-house-user"></i></div>
+            <span><i class="fa-solid fa-money-bill-trend-up fa-flip-vertical" onclick="goToWithdraw()"></i></span>
+            <div class="menu-btn"><i class="fa-solid fa-house-user" onclick="goToHome()"></i></div>
             <span><!---to evenly space icons---></span>
             <span><i class="fa-regular fa-calendar-days" onclick="goToCalendar()"></i></span>
-            <span><i class="fa-solid fa-chart-pie" onclick="goToStatistical()"></i></span>
+            <span><i class="fa-solid fa-power-off" onclick="logout()"></i></span>
         </div>
 
     </div>
